# turn-based

./: .gitignore  .luacheckrc  CMakeLists.txt  README.md
data/entity/: default.evil.entity  default.good.entity
data/skill/: base.lua  func.lua  main.lua  perk.lua
doc/: elements.md  entities.md  func.md  notes.md  skills.md  userdoc.tex
doc/sec/: element.tex  entity.tex  func.tex  skill.tex
lua/: test.lua
lua/skills/: base.lua  main.lua
src/: conmain.cpp  conutil.cpp  conutil.h  game.cpp  game.h  main.cpp  overload.h  random.h
src/battle/: action.h  battlesystem.cpp  battlesystem.h  battleview.h  config.cpp  config.h  controller.h  element.h  entity.cpp  entity.h  messages.h  npccontroller.cpp  npccontroller.h  playercontroller.cpp  playercontroller.h  skill.cpp  skill.h  skilldetails.h  skillhooks.h  skillref.h  stats.cpp  stats.h  statuseffect.cpp  statuseffect.h
src/util/: overload.h  random.h
